--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-ultralytics==8.3.78
 PyQt5==5.15.11
+qtawesome==1.3.1
 numpy==1.26.4
+opencv-python==4.11.0.86
+torch==2.6.0
+torchvision==0.21.0
+ultralytics==8.3.78
