--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Set up Miniconda with Python 3.10
         uses: conda-incubator/setup-miniconda@v2
         with:
+          miniconda-version: "latest" 
           auto-update-conda: true
           python-version: 3.10
           activate-environment: test-env
