--- a/.github/workflows/python-package-conda_test.yml
+++ b/.github/workflows/python-package-conda_test.yml
@@ -3,10 +3,11 @@ name: Test
 on: [push]
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
+  test:
     strategy:
-      max-parallel: 5
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
