--- a/.github/workflows/python-package-conda_test.yml
+++ b/.github/workflows/python-package-conda_test.yml
@@ -8,6 +8,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
+    env:
+      DISPLAY: ':99.0'
 
     steps:
     - uses: actions/checkout@v4
@@ -22,6 +24,11 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
+
+    - uses: tlambert03/setup-qt-libs@v1
+    - name: build "display"
+      run: |
+        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
     - name: Test
       run: |
         python3 run.py
