--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -12,6 +12,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
+    env:
+      DISPLAY: ':99.0'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -23,7 +25,10 @@ jobs:
           auto-update-conda: true
           python-version: 3.10
           activate-environment: test-env
-
+      - uses: tlambert03/setup-qt-libs@v1
+      - name: build "display"
+        run: |
+          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
       - name: Install dependencies
         run: |
           conda run -n test-env pip install --upgrade pip
