--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,4 +1,4 @@
-name: Python Package using Conda
+name: Python Package using MacOS and Windows
 
 on: [push]
 
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [macos-latest, windows-latest]
       max-parallel: 5
 
     steps:
@@ -34,4 +34,4 @@ jobs:
       run: |
         pip install pytest
         pip install pytest-qt
-        pytest
+        pytest -v -s
