--- a/.github/workflows/ubuntu_test.yml
+++ b/.github/workflows/ubuntu_test.yml
@@ -22,7 +22,6 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        sudo apt-get update && sudo apt-get install -y xvfb
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
@@ -35,4 +34,5 @@ jobs:
       run: |
         pip install pytest
         pip install pytest-qt
-        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' pytest -v -s
+        export QT_QPA_PLATFORM=offscreen
+        pytest -v
